# peltzer

./: .editorconfig  .gitignore  BACKLOG.md  CLAUDE.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/commands/: backlog.md  verify.md
design/: prompts.md
src/: App.svelte  connection.ts  main.ts  query.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: connection.rs  connection_config.rs  lib.rs  main.rs  query.rs
src/__tests__/: App.test.ts
src/components/: Button.svelte  ConnectionForm.svelte  ConnectionList.svelte  ExecutionPanel.svelte  ExecutionPanel.test.ts  Modal.svelte  QueryPane.svelte  ResultsPane.svelte  Sidebar.svelte  TabBar.svelte  TestConnectionButton.svelte  ToastContainer.svelte
src/components/__tests__/: Button.test.ts  ButtonTestHarness.svelte  TestConnectionButtonHarness.svelte  ToastContainer.test.ts  ToastTestHarness.svelte
src/connections/: ConnectionForm.svelte  ConnectionPicker.svelte  ConnectionsPanel.svelte  CosmosConnectionFields.svelte  StandardConnectionFields.svelte  TestConnectionButton.svelte
src/connections/__tests__/: ConnectionsPanel.test.ts  TestConnectionButton.test.ts  (+1 more)
src/lib/: api.ts  stores.ts  toastStore.ts  types.ts
src/query/: ExecutionPanel.svelte  QueryHeader.svelte  QueryPane.svelte  QueryTab.svelte  ResultsPane.svelte  TabBar.svelte  TabContainer.svelte  queryStore.ts  types.ts
src/test/: setup.ts
(+1 files in other folders)
